--- a/ETL Pipelines/12_dummyvariables_exercise/12_dummyvariables_exercise.ipynb
+++ b/ETL Pipelines/12_dummyvariables_exercise/12_dummyvariables_exercise.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1142,7 +1142,7 @@
        " ...]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1195,16 +1195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                                             NaN\n",
-       "1                                             NaN\n",
-       "2                                             NaN\n",
-       "3                                             NaN\n",
+       "0                                            !$!0\n",
+       "1                                            !$!0\n",
+       "2                                            !$!0\n",
+       "3                                            !$!0\n",
        "4                     Social Protection!$!63!$!SA\n",
        "                           ...                   \n",
        "18243                  (Historic)Hydro!$!100!$!PH\n",
@@ -1215,7 +1215,7 @@
        "Name: sector1, Length: 18248, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
        "Name: sector, Length: 18248, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,51 +1320,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                          0\n",
-       "1                          0\n",
-       "2                          0\n",
-       "3                          0\n",
-       "4          Social Protection\n",
-       "                ...         \n",
-       "18243                  Hydro\n",
-       "18244    Economic management\n",
-       "18245    Economic management\n",
-       "18246    Economic management\n",
-       "18247    Economic management\n",
+       "0        NaN\n",
+       "1        NaN\n",
+       "2        NaN\n",
+       "3        NaN\n",
+       "4        NaN\n",
+       "        ... \n",
+       "18243    NaN\n",
+       "18244    NaN\n",
+       "18245    NaN\n",
+       "18246    NaN\n",
+       "18247    NaN\n",
        "Name: sector1_aggregates, Length: 18248, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import re\n",
-    "\n",
-    "# Create the sector1_aggregates variable\n",
-    "sector.loc[:,'sector1_aggregates'] = sector['sector1']\n",
-    "\n",
-    "sector['sector1_aggregates'] = sector['sector1_aggregates'].fillna('0')\n",
     "sector['sector1_aggregates']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of unique sectors after cleaning: 156\n"
+      "Number of unique sectors after cleaning: 145\n"
      ]
     }
    ],
@@ -1384,7 +1380,8 @@
     "# HINT: You can use the contains() methods. See the documentation for how to ignore case using the re library\n",
     "# HINT: You might get an error saying \"cannot index with vector containing NA / NaN values.\" \n",
     "#       Try converting NaN values to something else like False or a string\n",
-    "\n",
+    "sector.loc[sector['sector1_aggregates'].str.contains('Energy', re.IGNORECASE).replace(np.nan, False),'sector1_aggregates'] = 'Energy'\n",
+    "sector.loc[sector['sector1_aggregates'].str.contains('Transportation', re.IGNORECASE).replace(np.nan, False),'sector1_aggregates'] = 'Transportation'\n",
     "print('Number of unique sectors after cleaning:', len(list(sector['sector1_aggregates'].unique())))"
    ]
   },
@@ -1403,23 +1400,288 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        2018.0\n",
+       "1        2018.0\n",
+       "2        2018.0\n",
+       "3        2018.0\n",
+       "4        2018.0\n",
+       "          ...  \n",
+       "18243    1948.0\n",
+       "18244    1947.0\n",
+       "18245    1947.0\n",
+       "18246    1947.0\n",
+       "18247    1947.0\n",
+       "Name: boardapprovaldate, Length: 18248, dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "projects['boardapprovaldate'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/xj/q_jj69d97y5cd2h3wn7zt0zc0000gn/T/ipykernel_96833/3450208825.py:13: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_final = df.append(dummies)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><div id=930d533d-3f9d-4cc2-a80f-37d8ef2ef7db style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('930d533d-3f9d-4cc2-a80f-37d8ef2ef7db').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>totalamt</th>\n",
+       "      <th>0</th>\n",
+       "      <th>Adult; Basic and Continuing Education</th>\n",
+       "      <th>Agency reform</th>\n",
+       "      <th>Agricultural Extension; Research; and Other Support Activities</th>\n",
+       "      <th>Agricultural credit</th>\n",
+       "      <th>Agricultural extension</th>\n",
+       "      <th>Agricultural markets; commercialization and agri-business</th>\n",
+       "      <th>Agriculture adjustment</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Urban housing</th>\n",
+       "      <th>Urban management</th>\n",
+       "      <th>Urban transport</th>\n",
+       "      <th>Urban water supply</th>\n",
+       "      <th>Vocational training</th>\n",
+       "      <th>Waste Management</th>\n",
+       "      <th>Water Supply</th>\n",
+       "      <th>Water supply and sanitation adjustment</th>\n",
+       "      <th>Workforce Development and Vocational Education</th>\n",
+       "      <th>nan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>200000000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>58330000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>20000000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>100000000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table></div>"
+      ],
+      "text/plain": [
+       "     year     totalamt   0  Adult; Basic and Continuing Education  \\\n",
+       "0  2018.0          0.0 NaN                                    NaN   \n",
+       "1  2018.0  200000000.0 NaN                                    NaN   \n",
+       "2  2018.0   58330000.0 NaN                                    NaN   \n",
+       "3  2018.0   20000000.0 NaN                                    NaN   \n",
+       "4  2018.0  100000000.0 NaN                                    NaN   \n",
+       "\n",
+       "   Agency reform  \\\n",
+       "0            NaN   \n",
+       "1            NaN   \n",
+       "2            NaN   \n",
+       "3            NaN   \n",
+       "4            NaN   \n",
+       "\n",
+       "   Agricultural Extension; Research; and Other Support Activities  \\\n",
+       "0                                                NaN                \n",
+       "1                                                NaN                \n",
+       "2                                                NaN                \n",
+       "3                                                NaN                \n",
+       "4                                                NaN                \n",
+       "\n",
+       "   Agricultural credit  Agricultural extension  \\\n",
+       "0                  NaN                     NaN   \n",
+       "1                  NaN                     NaN   \n",
+       "2                  NaN                     NaN   \n",
+       "3                  NaN                     NaN   \n",
+       "4                  NaN                     NaN   \n",
+       "\n",
+       "   Agricultural markets; commercialization and agri-business  \\\n",
+       "0                                                NaN           \n",
+       "1                                                NaN           \n",
+       "2                                                NaN           \n",
+       "3                                                NaN           \n",
+       "4                                                NaN           \n",
+       "\n",
+       "   Agriculture adjustment  ...  Urban housing  Urban management  \\\n",
+       "0                     NaN  ...            NaN               NaN   \n",
+       "1                     NaN  ...            NaN               NaN   \n",
+       "2                     NaN  ...            NaN               NaN   \n",
+       "3                     NaN  ...            NaN               NaN   \n",
+       "4                     NaN  ...            NaN               NaN   \n",
+       "\n",
+       "   Urban transport  Urban water supply  Vocational training  Waste Management  \\\n",
+       "0              NaN                 NaN                  NaN               NaN   \n",
+       "1              NaN                 NaN                  NaN               NaN   \n",
+       "2              NaN                 NaN                  NaN               NaN   \n",
+       "3              NaN                 NaN                  NaN               NaN   \n",
+       "4              NaN                 NaN                  NaN               NaN   \n",
+       "\n",
+       "   Water Supply  Water supply and sanitation adjustment  \\\n",
+       "0           NaN                                     NaN   \n",
+       "1           NaN                                     NaN   \n",
+       "2           NaN                                     NaN   \n",
+       "3           NaN                                     NaN   \n",
+       "4           NaN                                     NaN   \n",
+       "\n",
+       "   Workforce Development and Vocational Education  NaN  \n",
+       "0                                             NaN  NaN  \n",
+       "1                                             NaN  NaN  \n",
+       "2                                             NaN  NaN  \n",
+       "3                                             NaN  NaN  \n",
+       "4                                             NaN  NaN  \n",
+       "\n",
+       "[5 rows x 148 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: Create dummy variables from the sector1_aggregates data. Put the results into a dataframe called dummies\n",
     "# Hint: Use the get_dummies method\n",
-    "dummies = None\n",
+    "dummies = pd.get_dummies(sector['sector1_aggregates'],dummy_na=True)\n",
     "\n",
     "# TODO: Create a new dataframe called df by \n",
     "#       filtering the projects data for the totalamt and\n",
     "#       the year from boardapprovaldate\n",
-    "projects['year'] = None\n",
-    "df = None\n",
+    "projects['year'] = projects['boardapprovaldate'].dt.year\n",
+    "df = projects[['year', 'totalamt']]\n",
     "\n",
     "# TODO: Concatenate the results of dummies and projects\n",
     "#       into a single data frame\n",
-    "df_final = None\n",
+    "df_final = df.append(dummies)\n",
     "\n",
     "df_final.head()"
    ]
