--- a/ETL Pipelines/12_dummyvariables_exercise/12_dummyvariables_exercise-solution.ipynb
+++ b/ETL Pipelines/12_dummyvariables_exercise/12_dummyvariables_exercise-solution.ipynb
@@ -128,7 +128,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
