--- a/ETL Pipelines/12_dummyvariables_exercise/12_dummyvariables_exercise-solution.ipynb
+++ b/ETL Pipelines/12_dummyvariables_exercise/12_dummyvariables_exercise-solution.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,12 +127,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1142,7 +1138,7 @@
        " ...]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1245,9 +1241,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                                      NaN\n",
+       "1                                                      NaN\n",
+       "2                                                      NaN\n",
+       "3                                                      NaN\n",
+       "4        Social Protection;Social Protection;Other Indu...\n",
+       "                               ...                        \n",
+       "18243                      (Historic)Hydro;(Historic)Hydro\n",
+       "18244    (Historic)Economic management;(Historic)Econom...\n",
+       "18245    (Historic)Economic management;(Historic)Econom...\n",
+       "18246    (Historic)Economic management;(Historic)Econom...\n",
+       "18247    (Historic)Economic management;(Historic)Econom...\n",
+       "Name: sector, Length: 18248, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sector['sector']"
    ]
@@ -1265,9 +1283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique sectors after cleaning: 145\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -1305,9 +1331,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div id=4a3ad6ab-7e5c-4813-9aef-22ea5dba1b30 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('4a3ad6ab-7e5c-4813-9aef-22ea5dba1b30').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>totalamt</th>\n",
+       "      <th>year</th>\n",
+       "      <th>Adult; Basic and Continuing Education</th>\n",
+       "      <th>Agency reform</th>\n",
+       "      <th>Agricultural Extension; Research; and Other Support Activities</th>\n",
+       "      <th>Agricultural credit</th>\n",
+       "      <th>Agricultural extension</th>\n",
+       "      <th>Agricultural markets; commercialization and agri-business</th>\n",
+       "      <th>Agriculture adjustment</th>\n",
+       "      <th>Agro-industry</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Urban environment</th>\n",
+       "      <th>Urban housing</th>\n",
+       "      <th>Urban management</th>\n",
+       "      <th>Urban transport</th>\n",
+       "      <th>Urban water supply</th>\n",
+       "      <th>Vocational training</th>\n",
+       "      <th>Waste Management</th>\n",
+       "      <th>Water Supply</th>\n",
+       "      <th>Water supply and sanitation adjustment</th>\n",
+       "      <th>Workforce Development and Vocational Education</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>200000000</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>58330000</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20000000</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100000000</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table></div>"
+      ],
+      "text/plain": [
+       "    totalamt    year  Adult; Basic and Continuing Education  Agency reform  \\\n",
+       "0          0  2018.0                                      0              0   \n",
+       "1  200000000  2018.0                                      0              0   \n",
+       "2   58330000  2018.0                                      0              0   \n",
+       "3   20000000  2018.0                                      0              0   \n",
+       "4  100000000  2018.0                                      0              0   \n",
+       "\n",
+       "   Agricultural Extension; Research; and Other Support Activities  \\\n",
+       "0                                                  0                \n",
+       "1                                                  0                \n",
+       "2                                                  0                \n",
+       "3                                                  0                \n",
+       "4                                                  0                \n",
+       "\n",
+       "   Agricultural credit  Agricultural extension  \\\n",
+       "0                    0                       0   \n",
+       "1                    0                       0   \n",
+       "2                    0                       0   \n",
+       "3                    0                       0   \n",
+       "4                    0                       0   \n",
+       "\n",
+       "   Agricultural markets; commercialization and agri-business  \\\n",
+       "0                                                  0           \n",
+       "1                                                  0           \n",
+       "2                                                  0           \n",
+       "3                                                  0           \n",
+       "4                                                  0           \n",
+       "\n",
+       "   Agriculture adjustment  Agro-industry  ...  Urban environment  \\\n",
+       "0                       0              0  ...                  0   \n",
+       "1                       0              0  ...                  0   \n",
+       "2                       0              0  ...                  0   \n",
+       "3                       0              0  ...                  0   \n",
+       "4                       0              0  ...                  0   \n",
+       "\n",
+       "   Urban housing  Urban management  Urban transport  Urban water supply  \\\n",
+       "0              0                 0                0                   0   \n",
+       "1              0                 0                0                   0   \n",
+       "2              0                 0                0                   0   \n",
+       "3              0                 0                0                   0   \n",
+       "4              0                 0                0                   0   \n",
+       "\n",
+       "   Vocational training  Waste Management  Water Supply  \\\n",
+       "0                    0                 0             0   \n",
+       "1                    0                 0             0   \n",
+       "2                    0                 0             0   \n",
+       "3                    0                 0             0   \n",
+       "4                    0                 0             0   \n",
+       "\n",
+       "   Water supply and sanitation adjustment  \\\n",
+       "0                                       0   \n",
+       "1                                       0   \n",
+       "2                                       0   \n",
+       "3                                       0   \n",
+       "4                                       0   \n",
+       "\n",
+       "   Workforce Development and Vocational Education  \n",
+       "0                                               0  \n",
+       "1                                               0  \n",
+       "2                                               0  \n",
+       "3                                               0  \n",
+       "4                                               0  \n",
+       "\n",
+       "[5 rows x 146 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: Create dummy variables from the sector1_aggregates data. Put the results into a dataframe called dummies\n",
     "# Hint: Use the get_dummies method\n",
