--- a/ETL Pipelines/14_outlierspart2_exercise/14_outliers_exercise-solution.ipynb
+++ b/ETL Pipelines/14_outlierspart2_exercise/14_outliers_exercise-solution.ipynb
@@ -238,9 +238,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-anaconda3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -252,9 +252,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
