--- a/ETL Pipelines/17_load_exercise/17_load_exercise.ipynb
+++ b/ETL Pipelines/17_load_exercise/17_load_exercise.ipynb
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +998,7 @@
     "# HINT: Pandas has a to_json() method\n",
     "# HINT: use orient='records' to get one of the more common json formats\n",
     "# HINT: be sure to specify the name of the json file you want to create as the first input into to_json\n",
-    "\n"
+    "df_merged.to_json('df_mergedfUCKOFF.json', orient='records')\n"
    ]
   },
   {
@@ -1025,14 +1025,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Output the df_merged data frame as a csv file\n",
     "# HINT: The to_csv() method is similar to the to_json() method.\n",
     "# HINT: If you do not want the data frame indices in your result, use index=False\n",
-    "\n"
+    "df_merged.to_csv('df_merged.csv', index=False)\n"
    ]
   },
   {
@@ -1073,9 +1073,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18248"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "\n",
@@ -1088,7 +1099,8 @@
     "# HINT: Use the to_sql() method\n",
     "# HINT: Use the conn variable for the connection parameter\n",
     "# HINT: You can use the if_exists parameter like if_exists='replace' to replace a table if it already exists\n",
-    "\n"
+    "\n",
+    "df_merged.to_sql('merged', con=conn, if_exists='replace')"
    ]
   },
   {
@@ -1104,30 +1116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=b97c8b16-0251-4d41-89c6-8e7fdf55f632 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('b97c8b16-0251-4d41-89c6-8e7fdf55f632').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>id</th>\n",
        "      <th>countryname_x</th>\n",
        "      <th>countrycode</th>\n",
@@ -1141,6 +1140,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>273</td>\n",
        "      <td>P162033</td>\n",
        "      <td>Federative Republic of Brazil</td>\n",
        "      <td>BRA</td>\n",
@@ -1152,6 +1152,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>285</td>\n",
        "      <td>P158000</td>\n",
        "      <td>Federative Republic of Brazil</td>\n",
        "      <td>BRA</td>\n",
@@ -1163,6 +1164,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>289</td>\n",
        "      <td>P163868</td>\n",
        "      <td>Federative Republic of Brazil</td>\n",
        "      <td>BRA</td>\n",
@@ -1174,6 +1176,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>313</td>\n",
        "      <td>P152285</td>\n",
        "      <td>Federative Republic of Brazil</td>\n",
        "      <td>BRA</td>\n",
@@ -1185,6 +1188,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>346</td>\n",
        "      <td>P147158</td>\n",
        "      <td>Federative Republic of Brazil</td>\n",
        "      <td>BRA</td>\n",
@@ -1195,16 +1199,15 @@
        "      <td>209288278.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "</table></div>"
       ],
       "text/plain": [
-       "        id                  countryname_x countrycode   totalamt  year  \\\n",
-       "0  P162033  Federative Republic of Brazil         BRA  125000000  2017   \n",
-       "1  P158000  Federative Republic of Brazil         BRA          0  2017   \n",
-       "2  P163868  Federative Republic of Brazil         BRA  250000000  2017   \n",
-       "3  P152285  Federative Republic of Brazil         BRA          0  2017   \n",
-       "4  P147158  Federative Republic of Brazil         BRA   50000000  2017   \n",
+       "   index       id                  countryname_x countrycode   totalamt  year  \\\n",
+       "0    273  P162033  Federative Republic of Brazil         BRA  125000000  2017   \n",
+       "1    285  P158000  Federative Republic of Brazil         BRA          0  2017   \n",
+       "2    289  P163868  Federative Republic of Brazil         BRA  250000000  2017   \n",
+       "3    313  P152285  Federative Republic of Brazil         BRA          0  2017   \n",
+       "4    346  P147158  Federative Republic of Brazil         BRA   50000000  2017   \n",
        "\n",
        "  countryname_y           gdp   population  \n",
        "0        Brazil  2.055506e+12  209288278.0  \n",
@@ -1214,7 +1217,7 @@
        "4        Brazil  2.055506e+12  209288278.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
