--- a/ETL Pipelines/17_load_exercise/17_load_exercise.ipynb
+++ b/ETL Pipelines/17_load_exercise/17_load_exercise.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><div id=ffa0c5b8-44b0-4c60-a65e-6b38836bda10 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('ffa0c5b8-44b0-4c60-a65e-6b38836bda10').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=7738a8c4-19d1-4503-85e5-e5c39981511d style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('7738a8c4-19d1-4503-85e5-e5c39981511d').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -83,7 +83,7 @@
        "4      Andorra         AND  1960  1.857319e+10     13411.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div id=b8f44ad0-5709-466d-b67f-6ca55391a263 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('b8f44ad0-5709-466d-b67f-6ca55391a263').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=f16eaab7-ef30-44d2-b9a8-455087039ac9 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('f16eaab7-ef30-44d2-b9a8-455087039ac9').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -267,7 +267,7 @@
        "4  P161364       Federal Republic of Nigeria         NGA  100000000  2018"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,13 +371,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><div id=61feb7ac-1460-40ae-9349-0761455f33cc style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('61feb7ac-1460-40ae-9349-0761455f33cc').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=d3b2842e-7902-4257-95f7-6913c6deb06f style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('d3b2842e-7902-4257-95f7-6913c6deb06f').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -497,7 +497,7 @@
        "[18248 rows x 5 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,13 +508,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><div id=dabdcc50-fd8c-48cc-ba91-e51f07d2cc94 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('dabdcc50-fd8c-48cc-ba91-e51f07d2cc94').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=797a1a46-19dd-4c65-98f6-96a9fe3b37ed style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('797a1a46-19dd-4c65-98f6-96a9fe3b37ed').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -634,7 +634,7 @@
        "[12586 rows x 5 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,6 +654,143 @@
     "# indicator data\n",
     "\n",
     "df_merged = df_projects.merge(df_indicator, on=['countrycode', 'year'], how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div id=dfcda31d-9f66-4b5e-a87f-2d0c01e141ea style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('dfcda31d-9f66-4b5e-a87f-2d0c01e141ea').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>countryname</th>\n",
+       "      <th>countrycode</th>\n",
+       "      <th>totalamt</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>P162228</td>\n",
+       "      <td>World</td>\n",
+       "      <td>WLD</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>P163962</td>\n",
+       "      <td>Democratic Republic of the Congo</td>\n",
+       "      <td>COD</td>\n",
+       "      <td>200000000</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>P167672</td>\n",
+       "      <td>People's Republic of Bangladesh</td>\n",
+       "      <td>BGD</td>\n",
+       "      <td>58330000</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>P158768</td>\n",
+       "      <td>Islamic  Republic of Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>20000000</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>P161364</td>\n",
+       "      <td>Federal Republic of Nigeria</td>\n",
+       "      <td>NGA</td>\n",
+       "      <td>100000000</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18243</th>\n",
+       "      <td>P006578</td>\n",
+       "      <td>Republic of Chile</td>\n",
+       "      <td>CHL</td>\n",
+       "      <td>13500000</td>\n",
+       "      <td>1948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18244</th>\n",
+       "      <td>P037451</td>\n",
+       "      <td>Grand Duchy of Luxembourg</td>\n",
+       "      <td>LUX</td>\n",
+       "      <td>12000000</td>\n",
+       "      <td>1947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18245</th>\n",
+       "      <td>P037362</td>\n",
+       "      <td>Kingdom of Denmark</td>\n",
+       "      <td>DNK</td>\n",
+       "      <td>40000000</td>\n",
+       "      <td>1947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18246</th>\n",
+       "      <td>P037452</td>\n",
+       "      <td>Kingdom of the Netherlands</td>\n",
+       "      <td>NLD</td>\n",
+       "      <td>195000000</td>\n",
+       "      <td>1947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18247</th>\n",
+       "      <td>P037383</td>\n",
+       "      <td>French Republic</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>250000000</td>\n",
+       "      <td>1947</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table></div>"
+      ],
+      "text/plain": [
+       "            id                       countryname countrycode   totalamt  year\n",
+       "0      P162228                             World         WLD          0  2018\n",
+       "1      P163962  Democratic Republic of the Congo         COD  200000000  2018\n",
+       "2      P167672   People's Republic of Bangladesh         BGD   58330000  2018\n",
+       "3      P158768  Islamic  Republic of Afghanistan         AFG   20000000  2018\n",
+       "4      P161364       Federal Republic of Nigeria         NGA  100000000  2018\n",
+       "...        ...                               ...         ...        ...   ...\n",
+       "18243  P006578                 Republic of Chile         CHL   13500000  1948\n",
+       "18244  P037451         Grand Duchy of Luxembourg         LUX   12000000  1947\n",
+       "18245  P037362                Kingdom of Denmark         DNK   40000000  1947\n",
+       "18246  P037452        Kingdom of the Netherlands         NLD  195000000  1947\n",
+       "18247  P037383                   French Republic         FRA  250000000  1947\n",
+       "\n",
+       "[18248 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_projects"
    ]
   },
   {
