--- a/NLP Pipelines/bow_tfidf_practice-zh.ipynb
+++ b/NLP Pipelines/bow_tfidf_practice-zh.ipynb
@@ -15,18 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+      "[nltk_data] Downloading package punkt to /Users/oo/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to /Users/oo/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+      "[nltk_data] Downloading package wordnet to /Users/oo/nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
@@ -36,7 +36,7 @@
        "True"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,10 +153,10 @@
        "       [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0,\n",
        "        0, 1, 0],\n",
        "       [0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,\n",
-       "        0, 0, 0]], dtype=int64)"
+       "        0, 0, 0]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,40 +168,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'2': 0,\n",
+       "{'first': 6,\n",
+       " 'time': 20,\n",
+       " 'see': 17,\n",
+       " 'second': 16,\n",
+       " 'renaissance': 15,\n",
+       " 'may': 11,\n",
+       " 'look': 9,\n",
+       " 'boring': 3,\n",
+       " 'least': 8,\n",
+       " 'twice': 21,\n",
+       " 'definitely': 5,\n",
+       " 'watch': 24,\n",
+       " 'part': 13,\n",
+       " '2': 0,\n",
+       " 'change': 4,\n",
+       " 'view': 22,\n",
+       " 'matrix': 10,\n",
+       " 'human': 7,\n",
+       " 'people': 14,\n",
+       " 'one': 12,\n",
+       " 'started': 18,\n",
+       " 'war': 23,\n",
        " 'ai': 1,\n",
        " 'bad': 2,\n",
-       " 'boring': 3,\n",
-       " 'change': 4,\n",
-       " 'definitely': 5,\n",
-       " 'first': 6,\n",
-       " 'human': 7,\n",
-       " 'least': 8,\n",
-       " 'look': 9,\n",
-       " 'matrix': 10,\n",
-       " 'may': 11,\n",
-       " 'one': 12,\n",
-       " 'part': 13,\n",
-       " 'people': 14,\n",
-       " 'renaissance': 15,\n",
-       " 'second': 16,\n",
-       " 'see': 17,\n",
-       " 'started': 18,\n",
-       " 'thing': 19,\n",
-       " 'time': 20,\n",
-       " 'twice': 21,\n",
-       " 'view': 22,\n",
-       " 'war': 23,\n",
-       " 'watch': 24}"
+       " 'thing': 19}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -394,9 +394,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
