--- a/NLP Pipelines/tokenization_practice-zh.ipynb
+++ b/NLP Pipelines/tokenization_practice-zh.ipynb
@@ -10,9 +10,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/oo/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import nltk\n",
     "nltk.download('punkt')"
@@ -30,18 +49,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import statements\n"
+    "# import statements\n",
+    "from nltk.tokenize import word_tokenize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dr. Smith graduated from the University of Washington. He later started an analytics firm called Lux, which catered to enterprise customers.\n"
+     ]
+    }
+   ],
    "source": [
     "text = \"Dr. Smith graduated from the University of Washington. He later started an analytics firm called Lux, which catered to enterprise customers.\"\n",
     "print(text)"
@@ -49,11 +77,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Dr.',\n",
+       " 'Smith',\n",
+       " 'graduated',\n",
+       " 'from',\n",
+       " 'the',\n",
+       " 'University',\n",
+       " 'of',\n",
+       " 'Washington',\n",
+       " '.',\n",
+       " 'He',\n",
+       " 'later',\n",
+       " 'started',\n",
+       " 'an',\n",
+       " 'analytics',\n",
+       " 'firm',\n",
+       " 'called',\n",
+       " 'Lux',\n",
+       " ',',\n",
+       " 'which',\n",
+       " 'catered',\n",
+       " 'to',\n",
+       " 'enterprise',\n",
+       " 'customers',\n",
+       " '.']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Split text into words using NLTK\n"
+    "# Split text into words using NLTK\n",
+    "word_tokenize(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Dr. Smith graduated from the University of Washington.',\n",
+       " 'He later started an analytics firm called Lux, which catered to enterprise customers.']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split text into sentences\n",
+    "from nltk import sent_tokenize\n",
+    "sent_tokenize(text)"
    ]
   },
   {
@@ -61,14 +147,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Split text into sentences\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -82,9 +166,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
